# BIR-BDC

./: CMakeLists.txt  OkvsTool.cpp  OkvsTool.h  Party1.cpp  Partyi.cpp  Partyn-1.cpp  Partyn.cpp  README.md  RsOprf.h  main.cpp  p1.cpp  p2.cpp  p3.cpp  pi.cpp  pn-1.cpp  pn.cpp
